--- a/src/promptflow/promptflow/_sdk/data/docker_csharp/Dockerfile
+++ b/src/promptflow/promptflow/_sdk/data/docker_csharp/Dockerfile
@@ -4,11 +4,19 @@ FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /
 COPY ./flow /flow
 COPY ./connections /connections
+COPY ./start.sh /start.sh
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS runtime
 COPY --from=build / /
 
-WORKDIR /flow
 ENV IS_IN_DOCKER="true"
 EXPOSE 8080
-ENTRYPOINT ["dotnet", "Promptflow.DotnetService.dll", "-y", "flow.dag.yaml", "-a", ".", "-c", "", "-p", "8080", "-l", "", "-s"]
+
+RUN apt-get update && apt-get install -y runit
+# reset runsvdir
+RUN rm -rf /var/runit
+COPY ./runit /var/runit
+# grant permission
+RUN chmod -R +x /var/runit
+
+CMD ["bash", "./start.sh"]
