Revert "release: test private build on samples"
This reverts commit 4139e1e284695cfde33a6b6d7db9fedd7f68c67b.

--- a/examples/requirements.txt
+++ b/examples/requirements.txt
@@ -1,5 +1,4 @@
---extra-index-url https://azuremlsdktestpypi.azureedge.net/promptflow/
-promptflow[azure]==1.1.1
+promptflow[azure]
 promptflow-tools==1.0.0
 python-dotenv
 bs4
