--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -70,8 +70,10 @@ jobs:
         run: |
           if ($env:INPUT_VERSION) {
             $version=$env:INPUT_VERSION
-            $haha=$(python -c "import promptflow; print(promptflow.__version__)")
-            echo "haha version: $haha"
+            $run_version=$(python -c "import promptflow; print(promptflow.__version__)")
+            if ($version -ne $run_version) {
+              throw "Version input does not match the version in promptflow package. Version input: $version, version in promptflow package: $run_version"
+            }
           } else {
             $prefix = 0
             $year = [int](Get-Date -Format "yy")
