remove noneed package

--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -48,6 +48,8 @@ jobs:
 
       - name: Python Setup
         uses: "./.github/actions/step_create_python_environment"
+        with:
+          pipFilePath: src/promptflow/msi_requirements.txt
 
       - name: Setup and Install dev promptflow
         if: ${{ github.event.inputs.version == null || github.event.inputs.version == '' }}
@@ -55,6 +57,7 @@ jobs:
         with:
           setupType: promptflow_with_extra
           scriptPath: ${{ env.testWorkingDirectory }}
+          requiredPackages: ./msi_requirements.txt
 
       - name: Install stable promptflow
         if: ${{ github.event.inputs.version != null && github.event.inputs.version != '' }}
