--- a/.github/actions/step_sdk_setup/action.yml
+++ b/.github/actions/step_sdk_setup/action.yml
@@ -25,7 +25,7 @@ runs:
     shell: pwsh
     run: |
       Set-PSDebug -Trace 1
-      pip install -r requiredPackages
+      pip install -r ${{ inputs.requiredPackages }}
       echo "########### pip list (Before) ###########"
       pip list
       python ./setup.py bdist_wheel
@@ -39,7 +39,7 @@ runs:
     shell: pwsh
     run: |
       Set-PSDebug -Trace 1
-      pip install -r requiredPackages
+      pip install -r ${{ inputs.requiredPackages }}
       python ./setup.py bdist_wheel
       $package = Get-ChildItem ./dist | ? { $_.Name.Contains('.whl')}
       pip install $package.FullName
