--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -132,6 +132,7 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Download JSON file from Azure Blob Storage
+        id: download-json
         run: |
           az storage blob download --account-name promptflowartifact --container-name msi-installer --name latest_version.json --file downloaded_version.json
           $downloaded_version=$(python -c "import json; new_version = json.load(open('downloaded_version.json'))['promptflow']")
@@ -140,6 +141,7 @@ jobs:
       - name: Check if version input is valid and upload JSON file
         run: |
           $version = "${{ steps.get-version.outputs.version }}"
+          $downloaded_version = "${{ steps.download-json.outputs.downloaded_version }}"
           if ($version -like '1.*' -and $version -gt $downloaded_version){
             $jsonContent = @{
               "promptflow" = $version
