refine test case

--- a/src/promptflow/tests/test_configs/flows/flow_with_dict_input/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/flow_with_dict_input/flow.dag.yaml
@@ -20,3 +20,4 @@ nodes:
     path: print_val.py
   inputs:
     val: ${get_dict_val.output.value}
+    origin_val: ${get_dict_val.output.origin_value}
