--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -151,7 +151,7 @@ jobs:
             Write-Output "Created latest_version.json with version: $version"
             az storage blob upload --account-name promptflowartifact --container-name msi-installer --file "latest_version.json" --name "latest_version.json" --overwrite
           } else {
-            Write-Output "skip uploading since version input is either empty or does not start with '1.'"
+            Write-Output "skip uploading since version input isn't greater than latest version or does not start with '1.'"
           }
 
       - name: Upload to Azure Storage
