Fix SDK code owner

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,5 @@
 * @microsoft/prompt-flow-approvers
+/src/promptflow/promptflow/* @microsoft/promptflow-sdk
 /src/promptflow/promptflow/_core/ @microsoft/promptflow-execution
 /src/promptflow/promptflow/_internal/ @microsoft/promptflow-execution
 /src/promptflow/promptflow/batch/ @microsoft/promptflow-execution
