--- a/.github/actions/step_sdk_setup/action.yml
+++ b/.github/actions/step_sdk_setup/action.yml
@@ -7,10 +7,6 @@ inputs:
     required: false
     default: promptflow_with_extra
     type: string
-  requiredPackages:
-    required: false
-    default: ./dev_requirements.txt
-    type: string
 runs:
   using: composite
   steps:
@@ -25,7 +21,7 @@ runs:
     shell: pwsh
     run: |
       Set-PSDebug -Trace 1
-      pip install -r ${{ inputs.requiredPackages }}
+      pip install -r ./dev_requirements.txt
       echo "########### pip list (Before) ###########"
       pip list
       python ./setup.py bdist_wheel
@@ -39,7 +35,7 @@ runs:
     shell: pwsh
     run: |
       Set-PSDebug -Trace 1
-      pip install -r ${{ inputs.requiredPackages }}
+      pip install -r ./dev_requirements.txt
       python ./setup.py bdist_wheel
       $package = Get-ChildItem ./dist | ? { $_.Name.Contains('.whl')}
       pip install $package.FullName
