--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -137,9 +137,9 @@ jobs:
 
       - name: Check if version input is valid and upload JSON file
         run: |
-          $version = [Version]"${{ steps.get-version.outputs.version }}"
-          $downloaded_version = [Version]"${{ steps.download-json.outputs.downloaded_version }}"
-          if ($version -like '1.*' -and $version -gt $downloaded_version){
+          $version = "${{ steps.get-version.outputs.version }}"
+          $downloaded_version = "${{ steps.download-json.outputs.downloaded_version }}"
+          if ($version -like '1.*' -and [Version]$version -gt [Version]$downloaded_version){
             $jsonContent = @{
               "promptflow" = $version
             } | ConvertTo-Json -Depth 100
