--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -17,4 +17,7 @@
 /src/promptflow/tests/sdk_cli_azure_test/ @microsoft/promptflow-sdk
 /src/promptflow/tests/sdk_cli_global_config_test/ @microsoft/promptflow-sdk
 /src/promptflow/tests/sdk_pfs_test/ @microsoft/promptflow-sdk
+/scripts/docs/ @microsoft/promptflow-sdk
+/scripts/installer/ @microsoft/promptflow-sdk
+/scripts/json_schema/ @microsoft/promptflow-sdk
 /scripts/readme/ @microsoft/promptflow-sdk
