--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -133,7 +133,7 @@ jobs:
         run: |
           az storage blob download --account-name promptflowartifact --container-name msi-installer --name latest_version.json --file downloaded_version.json
           $downloaded_version=$(python -c "import json; new_version = json.load(open('downloaded_version.json'))['promptflow']")
-          echo "::set-output name=downloaded_version::downloaded_version"
+          echo "::set-output name=downloaded_version::$downloaded_version"
 
       - name: Check if version input is valid and upload JSON file
         run: |
