--- a/.github/workflows/promptflow-executor-unit-test.yml
+++ b/.github/workflows/promptflow-executor-unit-test.yml
@@ -99,13 +99,10 @@ jobs:
       working-directory: ${{ github.workspace }}
       run: |
         pip install langchain
-        python scripts/building/run_coverage_tests.py `
-          -p ${{ env.testWorkingDirectory }}/promptflow `
-          -t ${{ env.testWorkingDirectory }}/tests/executor/unittests `
-          -l eastus `
-          -m "all" `
-          --coverage-config ${{ env.testWorkingDirectory }}/tests/executor/.coveragerc `
-          --disable-cov-branch
+        pytest tests/executor/unittests -n auto --dist loadfile -vv -ra `
+        --junitxml=test-results.xml --cov=promptflow --cov-report=term --cov-report=xml --cov-report=html `
+        --cov-config=tests/executor/.coveragerc --log-level=info --log-format="%(asctime)s %(levelname)s %(message)s" --log-date-format="[%Y-%m-%d %H:%M:%S]" `
+        --durations=5 --cov-branch
     - name: Upload Test Results
       if: always()
       uses: actions/upload-artifact@v3
