--- a/.github/workflows/promptflow-executor-unit-test.yml
+++ b/.github/workflows/promptflow-executor-unit-test.yml
@@ -99,6 +99,7 @@ jobs:
       working-directory: ${{ github.workspace }}
       run: |
         pip install langchain
+        pip uninstall pytest-xdist -y
         pytest src/promptflow/tests/executor/unittests -vv -ra `
         --junitxml=test-results.xml --cov=promptflow --cov-report=term --cov-report=xml --cov-report=html `
         --cov-config=src/promptflow/tests/executor/.coveragerc --log-level=info --log-format="%(asctime)s %(levelname)s %(message)s" --log-date-format="[%Y-%m-%d %H:%M:%S]" `
