--- a/.github/workflows/sdk-cli-perf-monitor-test.yml
+++ b/.github/workflows/sdk-cli-perf-monitor-test.yml
@@ -13,7 +13,7 @@ on:
       - .github/workflows/promptflow-sdk-cli-perf-monitor-test.yml
 
   schedule:
-    - cron: "30 20 * * *"  # 4:30 Beijing Time (GMT+8)
+    - cron: "0 */6 * * *"  # Run every 6 hours
 
   workflow_dispatch:
 
