--- a/.github/workflows/sdk-cli-perf-monitor-test.yml
+++ b/.github/workflows/sdk-cli-perf-monitor-test.yml
@@ -47,6 +47,12 @@ jobs:
         with:
           pythonVersion: ${{ steps.display_env.outputs.pyVersion }}
 
+      - name: Build wheel
+        uses: "./.github/actions/step_sdk_setup"
+        with:
+          setupType: ${{ env.packageSetupType }}
+          scriptPath: ${{ env.testWorkingDirectory }}
+
       - name: Run Test
         shell: pwsh
         working-directory: ${{ env.testWorkingDirectory }}
