--- a/.github/workflows/sdk-cli-perf-monitor-test.yml
+++ b/.github/workflows/sdk-cli-perf-monitor-test.yml
@@ -61,6 +61,11 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: generate live test resources (non pull_request workflow)
+        uses: "./.github/actions/step_generate_configs"
+        with:
+          targetFolder: ${{ env.testWorkingDirectory }}
+
       - name: Run Test
         shell: pwsh
         working-directory: ${{ env.testWorkingDirectory }}
