--- a/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/open_source_llm.yaml
@@ -8,17 +8,26 @@ promptflow.tools.open_source_llm.OpenSourceLLM.call:
   function: call
   inputs:
     endpoint_name:
-      default: "-- please enter an endpoint name --"
       type:
       - string
-    connection:
-      default: null
-      type:
-      - CustomConnection
+      dynamic_list:
+        func_path: promptflow.tools.open_source_llm.list_endpoint_names
+      allow_manual_entry: true # Allow the user to clear this field
+      is_multi_select: false
     deployment_name:
-      default: null
+      default: ''
       type:
       - string
+      dynamic_list:
+        func_path: promptflow.tools.open_source_llm.list_deployment_names
+        func_kwargs:
+        - name: endpoint
+          type: 
+          - string
+          optional: true
+          reference: ${inputs.endpoint} 
+      allow_manual_entry: true
+      is_multi_select: false
     api:
       enum:
       - chat
