--- a/src/promptflow/tests/test_configs/flows/web_classification_with_exception/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/web_classification_with_exception/flow.dag.yaml
@@ -32,7 +32,7 @@ nodes:
     type: code
     path: classify_with_llm.jinja2
   inputs:
-    deployment_name: text-davinci-003
+    deployment_name: gpt-35-turbo
     suffix: ''
     max_tokens: '128'
     temperature: '0.1'
@@ -69,7 +69,7 @@ node_variants:
             type: code
             path: summarize_text_content.jinja2
           inputs:
-            deployment_name: text-davinci-003
+            deployment_name: gpt-35-turbo
             suffix: ''
             max_tokens: '128'
             temperature: '0.2'
@@ -93,7 +93,7 @@ node_variants:
             type: code
             path: summarize_text_content__variant_1.jinja2
           inputs:
-            deployment_name: text-davinci-003
+            deployment_name: gpt-35-turbo
             suffix: ''
             max_tokens: '256'
             temperature: '0.3'
