--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,7 +1,8 @@
-name: 'Close stale issues and PRs'
+name: 'Close stale issues and pull requests'
 on:
   schedule:
-    - cron: '30 1 * * *'
+    - cron: '30 21 * * *'  # 5:30 Beijing Time (GMT+8)
+  workflow_dispatch:
 
 jobs:
   stale:
@@ -12,11 +13,14 @@ jobs:
     steps:
       - uses: actions/stale@v8
         with:
-          stale-issue-message: 'This issue is stale because it has been open 30 days with no activity. Remove stale label or comment or this will be closed in 5 days.'
-          stale-pr-message: 'This PR is stale because it has been open 45 days with no activity. Remove stale label or comment or this will be closed in 10 days.'
-          close-issue-message: 'This issue was closed because it has been stalled for 5 days with no activity.'
-          close-pr-message: 'This PR was closed because it has been stalled for 10 days with no activity.'
-          days-before-issue-stale: 30
-          days-before-pr-stale: 45
-          days-before-issue-close: 5
-          days-before-pr-close: 10
+          # stale issue/pull request
+          stale-issue-message: "Hi, we're sending this friendly reminder because we haven't heard back from you in 7 days. We need more information about this issue to help address it. Please be sure to give us your input."
+          stale-issue-label: 'no-recent-activity'
+          stale-pr-message: "Hi, thank you for your interest in helping to improve the prompt flow experience and for your contribution. We've noticed that there hasn't been recent engagement on this pull request. If this is still an active work stream, please let us know by pushing some changes or leaving a comment."
+          stale-pr-label: 'no-recent-activity'
+          days-before-issue-stale: 7
+          days-before-pr-stale: 7
+          # # close issue/pull request
+          # close-pr-message: 'Hi, thank you for your contribution. Since there hasn't been recent engagement, we're going to close this out.'
+          # days-before-issue-close: 14
+          # days-before-pr-close: 7
