fixing the test of test_line_execution_process_pool[, using ada instead

--- a/src/promptflow/tests/test_configs/flows/web_classification_no_variants/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/web_classification_no_variants/flow.dag.yaml
@@ -23,7 +23,7 @@ nodes:
     type: code
     path: summarize_text_content__variant_1.jinja2
   inputs:
-    deployment_name: gpt-35-turbo
+    deployment_name: text-ada-001
     suffix: ''
     max_tokens: '256'
     temperature: '0.2'
@@ -52,7 +52,7 @@ nodes:
     type: code
     path: classify_with_llm.jinja2
   inputs:
-    deployment_name: gpt-35-turbo
+    deployment_name: text-ada-001
     suffix: ''
     max_tokens: '128'
     temperature: '0.2'
