--- a/.github/workflows/promptflow-release-testing-matrix-alter.yml
+++ b/.github/workflows/promptflow-release-testing-matrix-alter.yml
@@ -47,6 +47,8 @@ jobs:
   promptflow_sdk_cli_tests:
     if: ${{ github.event_name == 'workflow_dispatch' || github.event_name == 'workflow_call' || github.event_name == 'pull_request' }}
     needs: build
+    env:
+      PROMPT_FLOW_TEST_MODE: "live"
     strategy:
       fail-fast: false
       matrix:
@@ -58,10 +60,10 @@ jobs:
       shell: pwsh
       run: |
         # Windows support of multiprocessing is different from other platforms, mock injections is not working properly in replay mode.
-        if ("${{ github.event_name }}" -eq "pull_request" -and (-not "${{ matrix.os }}" -eq "windows-latest")) {
-          echo "PROMPT_FLOW_TEST_MODE=replay"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
-        } else {
+        if ("${{ matrix.os }}" -eq "windows-latest") {
           echo "PROMPT_FLOW_TEST_MODE=live"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
+        } else {
+          echo "PROMPT_FLOW_TEST_MODE=replay"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
         }
     - name: checkout
       uses: actions/checkout@v3
@@ -80,12 +82,20 @@ jobs:
         path: artifacts
     - name: Azure Login
       uses: azure/login@v1
+      if: env.PROMPT_FLOW_TEST_MODE == 'live'
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - name: Generate Configs
       uses: "./.github/actions/step_generate_configs"
+      if: env.PROMPT_FLOW_TEST_MODE == 'live'
       with:
         targetFolder: ${{ env.testWorkingDirectory }}
+    - name: generate test resources placeholder
+      if: env.PROMPT_FLOW_TEST_MODE != 'live'
+      shell: pwsh
+      working-directory: ${{ env.testWorkingDirectory }}
+      run: |
+        cp ${{ github.workspace }}/src/promptflow/dev-connections.json.example ${{ github.workspace }}/src/promptflow/connections.json
     - name: Install pf
       shell: pwsh
       working-directory: artifacts
@@ -140,6 +150,8 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         pythonVersion: ['3.8', '3.9', '3.10', '3.11']
+    env:
+      PROMPT_FLOW_TEST_MODE: "replay"
     runs-on: ${{ matrix.os }}
     steps:
     - name: checkout
@@ -159,12 +171,20 @@ jobs:
         path: artifacts
     - name: Azure Login
       uses: azure/login@v1
+      if: env.PROMPT_FLOW_TEST_MODE == 'live'
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     - name: Generate Configs
       uses: "./.github/actions/step_generate_configs"
+      if: env.PROMPT_FLOW_TEST_MODE == 'live'
       with:
         targetFolder: ${{ env.testWorkingDirectory }}
+    - name: generate test resources placeholder
+      if: env.PROMPT_FLOW_TEST_MODE != 'live'
+      shell: pwsh
+      working-directory: ${{ env.testWorkingDirectory }}
+      run: |
+        cp ${{ github.workspace }}/src/promptflow/dev-connections.json.example ${{ github.workspace }}/src/promptflow/connections.json
     - name: Install pf azure
       shell: pwsh
       working-directory: artifacts
