--- a/.github/workflows/promptflow-release-testing-matrix-alter.yml
+++ b/.github/workflows/promptflow-release-testing-matrix-alter.yml
@@ -60,7 +60,8 @@ jobs:
       shell: pwsh
       run: |
         # Windows support of multiprocessing is different from other platforms, mock injections is not working properly in replay mode.
-        if ("${{ matrix.os }}" -eq "windows-latest") {
+        # Mac is not stable in replaying test.
+        if (("${{ matrix.os }}" -eq "windows-latest") -or ("${{ matrix.os }}" -eq "macos-latest")) {
           echo "PROMPT_FLOW_TEST_MODE=live"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
         } else {
           echo "PROMPT_FLOW_TEST_MODE=replay"  | Out-File -FilePath $Env:GITHUB_ENV -Encoding utf8 -Append
