--- a/.github/workflows/promptflow-executor-e2e-test.yml
+++ b/.github/workflows/promptflow-executor-e2e-test.yml
@@ -4,12 +4,18 @@ on:
     - cron: "40 20 * * *" # Every day starting at 4:40 BJT
   pull_request_target:
     paths:
+      - /src/promptflow/*
+      - /src/promptflow/promptflow/*
       - /src/promptflow/promptflow/_core/**
       - /src/promptflow/promptflow/_internal/**
+      - /src/promptflow/promptflow/_utils/**
       - /src/promptflow/promptflow/batch/**
+      - /src/promptflow/promptflow/contracts/**
+      - /src/promptflow/promptflow/entities/**
       - /src/promptflow/promptflow/executor/**
       - /src/promptflow/promptflow/integrations/**
       - /src/promptflow/promptflow/storage/**
+      - /src/promptflow/tests/*
       - /src/promptflow/tests/executor/**
       - scripts/building/**
       - .github/workflows/promptflow-executor-e2e-test.yml
