--- a/.github/workflows/promptflow-executor-unit-test.yml
+++ b/.github/workflows/promptflow-executor-unit-test.yml
@@ -4,19 +4,19 @@ on:
     - cron: "40 19 * * *" # Every day starting at 3:40 BJT
   pull_request_target:
     paths:
-      - /src/promptflow/*
-      - /src/promptflow/promptflow/*
-      - /src/promptflow/promptflow/_core/**
-      - /src/promptflow/promptflow/_internal/**
-      - /src/promptflow/promptflow/_utils/**
-      - /src/promptflow/promptflow/batch/**
-      - /src/promptflow/promptflow/contracts/**
-      - /src/promptflow/promptflow/entities/**
-      - /src/promptflow/promptflow/executor/**
-      - /src/promptflow/promptflow/integrations/**
-      - /src/promptflow/promptflow/storage/**
-      - /src/promptflow/tests/*
-      - /src/promptflow/tests/executor/**
+      - src/promptflow/*
+      - src/promptflow/promptflow/*
+      - src/promptflow/promptflow/_core/**
+      - src/promptflow/promptflow/_internal/**
+      - src/promptflow/promptflow/_utils/**
+      - src/promptflow/promptflow/batch/**
+      - src/promptflow/promptflow/contracts/**
+      - src/promptflow/promptflow/entities/**
+      - src/promptflow/promptflow/executor/**
+      - src/promptflow/promptflow/integrations/**
+      - src/promptflow/promptflow/storage/**
+      - src/promptflow/tests/*
+      - src/promptflow/tests/executor/**
       - scripts/building/**
       - .github/workflows/promptflow-executor-unit-test.yml
   workflow_dispatch:
