change max_tokens default value to 512

--- a/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/openai_gpt4v.yaml
@@ -32,7 +32,7 @@ promptflow.tools.openai_gpt4v.OpenAI.chat:
       type:
         - double
     max_tokens:
-      default: ""
+      default: 512
       type:
         - int
     stop:
