fix failed test case

--- a/.github/workflows/promptflow-sdk-pfs-e2e-test.yml
+++ b/.github/workflows/promptflow-sdk-pfs-e2e-test.yml
@@ -26,6 +26,7 @@ jobs:
     steps:
       - run: true
   sdk_pfs_e2e_test:
+    needs: authorize
     strategy:
       fail-fast: false
       matrix:
