--- a/.github/workflows/build_msi_installer.yml
+++ b/.github/workflows/build_msi_installer.yml
@@ -37,6 +37,8 @@ jobs:
 
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.1
+        with:
+           msbuild-architecture: x64
 
       - name: Install WIX Toolset
         shell:  pwsh
