--- a/.github/workflows/promptflow-sdk-cli-test.yml
+++ b/.github/workflows/promptflow-sdk-cli-test.yml
@@ -105,7 +105,7 @@ jobs:
           -l eastus `
           -m "unittest or e2etest" `
           --coverage-config ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/.coveragerc `
-          -o "${{ github.workspace }}/test-results-sdk-cli.xml" `
+          -o "${{ env.testWorkingDirectory }}/test-results-sdk-cli.xml" `
           --ignore-glob ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/e2etests/test_executable.py
     - name: Install pf executable
       shell: pwsh
@@ -125,14 +125,14 @@ jobs:
           -t ${{ github.workspace }}/src/promptflow/tests/sdk_cli_test/e2etests/test_executable.py `
           -l eastus `
           -m "unittest or e2etest" `
-          -o "${{ github.workspace }}/test-results-sdk-cli-executable.xml"
+          -o "${{ env.testWorkingDirectory }}/test-results-sdk-cli-executable.xml"
     - name: Upload Test Results
       if: always()
       uses: actions/upload-artifact@v3
       with:
         name: Test Results (Python ${{ matrix.pythonVersion }}) (OS ${{ matrix.os }})
         path: |
-          ${{ github.workspace }}/*.xml
+          ${{ env.testWorkingDirectory }}/*.xml
           ${{ env.testWorkingDirectory }}/htmlcov/
   publish-test-results:
     name: "Publish Tests Results"
