--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -1,6 +1,6 @@
 name: tools_tests
 on:
-  pull_request_target:
+  pull_request:
     paths:
       - src/promptflow-tools/**
       - '**tools_tests.yml'
@@ -11,11 +11,14 @@ jobs:
     runs-on: ubuntu-latest
     name: Tool Test
     timeout-minutes: 30
+    env:
+      # PF_SOURCE is "main" or "package", means the source of pf code
+      PF_SOURCE: "main"
 
     steps:
       - name: Check for dockerenv file
         run: (ls /.dockerenv && echo Found dockerenv) || (echo No dockerenv)
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
@@ -23,16 +26,22 @@ jobs:
       - name: Setup
         run: |
           python -m pip install --upgrade pip
-          python ./scripts/building/dev_setup.py --promptflow-extra-deps azure
           pip install pytest pytest_mock
           pip install azure-identity azure-keyvault-secrets
-          pip install google-search-results==2.4.1
-          pip install openai>=1.0.0
+          if [ "${{ env.PF_SOURCE }}" = "main" ]; then
+            python ./scripts/building/dev_setup.py --promptflow-extra-deps azure
+            pip install google-search-results==2.4.1
+            pip install openai>=1.0.0
+          else
+            pip install -r ./src/promptflow-tools/requirements.txt
+          fi
       - name: Generate configs
         run: |
           python ./scripts/tool/generate_connection_config.py --tenant_id ${{ secrets.TENANT_ID }} --client_id ${{ secrets.CLIENT_ID }} --client_secret ${{ secrets.CLIENT_SECRET }}
 
       - name: Run tests
         run: |
-          export PYTHONPATH=./src/promptflow
+          if [ "${{ env.PF_SOURCE }}" = "main" ]; then
+            export PYTHONPATH=./src/promptflow
+          fi
           pytest ./src/promptflow-tools/tests
