--- a/.github/workflows/tools_tests.yml
+++ b/.github/workflows/tools_tests.yml
@@ -13,7 +13,7 @@ jobs:
     timeout-minutes: 30
     env:
       # PF_SOURCE is "main" or "package", means the source of pf code
-      PF_SOURCE: "main"
+      PF_SOURCE: "package"
 
     steps:
       - name: Check for dockerenv file
