--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -10,8 +10,11 @@ jobs:
   check-enforcer:
     runs-on: ubuntu-latest
     steps:
+      - name: checkout
+        uses: actions/checkout@v4
       - name: Summarize check status
         id: summarize_check_status
+        working-directory: ${{ github.workspace }}
         shell: pwsh
         run: |
           Set-PSDebug -Trace 1
