--- a/.github/workflows/check_enforcer.yml
+++ b/.github/workflows/check_enforcer.yml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - run: git fetch origin main
+      - run: env | sort >> $GITHUB_OUTPUT
       - name: Summarize check status
         id: summarize_check_status
         working-directory: ${{ github.workspace }}
