--- a/.github/workflows/promptflow-sdk-pfs-e2e-test.yml
+++ b/.github/workflows/promptflow-sdk-pfs-e2e-test.yml
@@ -16,7 +16,17 @@ env:
   IS_IN_CI_PIPELINE: "true"
 
 jobs:
+  authorize:
+    environment:
+      # forked prs from pull_request_target will be run in external environment, domain prs will be run in internal environment
+      ${{ github.event_name == 'pull_request_target' &&
+      github.event.pull_request.head.repo.full_name != github.repository &&
+      'external' || 'internal' }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: true
   sdk_pfs_e2e_test:
+    needs: authorize
     strategy:
       fail-fast: false
       matrix:
@@ -54,6 +64,11 @@ jobs:
     - name: Get number of CPU cores
       uses: SimenB/github-actions-cpu-cores@v1
       id: cpu-cores
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Run Test
       shell: pwsh
