add enabled by for deployment name

--- a/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
+++ b/src/promptflow-tools/promptflow/tools/yamls/aoai_gpt4v.yaml
@@ -18,6 +18,12 @@ promptflow.tools.aoai_gpt4v.AzureOpenAI.chat:
       type:
         - AzureOpenAIConnection
     deployment_name:
+      enabled_by: connection
+      enabled_by_type: [AzureOpenAIConnection]
+      capabilities:
+        completion: false
+        chat_completion: true
+        embeddings: false
       type:
         - string
     temperature:
