Rename open source to open model

--- a/src/promptflow/tests/test_configs/flows/web_classification_invalid/flow.dag.yaml
+++ b/src/promptflow/tests/test_configs/flows/web_classification_invalid/flow.dag.yaml
@@ -78,7 +78,7 @@ nodes:
     path: convert_to_dict.py
   inputs:
     input_str: ${classify_with_llm.output}
-- name: open_source_llm_tool
+- name: open_model_llm_tool
   type: custom_llm
   source:
     type: package_with_prompt
